# biotipoCalculadora

biotipoCalculdora/: pyproject.toml  replit_zip_error_log.txt
biotipoCalculdora/Estudos/: alpha1.py  alpha2.py
